# PW_HW_9

./: README.md  main.py  pyproject.toml
json/: authors.json
